[Home]

Summary:ASTERISK-22623: ARI: Recording using name of already present stored recording does not indicate failure
Reporter:Joshua C. Colp (jcolp)Labels:
Date Opened:2013-10-01 14:03:52Date Closed:2013-10-25 16:30:03
Priority:MinorRegression?No
Status:Closed/CompleteComponents:Resources/res_ari
Versions:12.0.0-alpha1 Frequency of
Occurrence
Constant
Related
Issues:
Environment:Attachments:
Description:When a live recording is started the only check that is performed is whether another live recording is occurring at the same time. A check for whether the recording exists on the system is NOT done. While the recording still fails this is not signaled to the consumer in any fashion.
Comments: