res/ari/resource_channels.c
@@ -420,7 +420,7 @@ void ast_ari_record_channel(struct ast_variable *headers,
 			break;
 		case EEXIST:
 			ast_ari_response_error(response, 409, "Conflict",
-				"Recording '%s' already in progress",
+				"Recording '%s' already exists and can not be overwritten",
 				args->name);
 			break;
 		case ENOMEM:
